force-app/main/default/objects/bofc__BOFCUserProfPerSet__c/fields/bofc__Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>bofc__Profile_Name__c</fullName>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>