force-app/main/default/objects/bofc__BOFCUserProfPerSet__c/fields/bofc__Type__c.field-meta.xml
<CustomField>
    <fullName>bofc__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>PermissionSet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>