force-app/main/default/objects/bofc__BOFCUserProfPerSet__c/fields/bofc__UserPermSets2__c.field-meta.xml
<CustomField>
    <fullName>bofc__UserPermSets2__c</fullName>
    <label>UserPermSets2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>