force-app/main/default/objects/bofc__BOFCUserProfPerSet__c/fields/bofc__UserPermSets3__c.field-meta.xml
<CustomField>
    <fullName>bofc__UserPermSets3__c</fullName>
    <label>UserPermSets3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>